[package]
name = "esprust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp388 = "0.1.0"
sht3x = "0.1.1"
veml7700 = "0.1.7"
embedded-hdc1080-rs = "0.1.0"


embassy-executor = { version = "0.1.1", features = ["nightly", "integrated-timers"] }
embassy-sync = { version = "0.1.0", features = ["nightly"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }

embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-async = "0.2.0-alpha.0"

esp-alloc = "0.2.0"
esp-backtrace = { version = "0.6.0", features = ["esp32c3", "print-uart", "panic-handler", "exception-handler"] }
esp-println = { version = "0.4.0", features = ["esp32c3"] }
esp32c3-hal = {version = "0.8.0", features = ["embassy", "embassy-time-systick"] }

# protobuf
prost = {version = "0.11.8", default-features = false, features = ["prost-derive"] }
bytes = { version = "1.4.0", default-features = false }

# handy lazy static variables
static_cell = "1.0.0"

[patch.crates-io]
embassy-executor = { git = 'https://github.com/embassy-rs/embassy.git', rev = "cd9a65b" }

[build-dependencies]
prost-build = "0.11.8"
